kernel_files = [
    'arithmetics.cl',
    'backproject.cl',
    'binarize.cl',
    'bin.cl',
    'clip.cl',
    'complex.cl',
    'correlate.cl',
    'cut.cl',
    'cut-sinogram.cl',
    'default.cl',
    'denoise.cl',
    'dfi.cl',
    'edge.cl',
    'ffc.cl',
    'fft.cl',
    'fftmult.cl',
    'filter.cl',
    'flip.cl',
    'forwardproject.cl',
    'gaussian.cl',
    'histthreshold.cl',
    'interpolator.cl',
    'median.cl',
    'metaballs.cl',
    'nlm.cl',
    'ordfilt.cl',
    'pad.cl',
    'phase-retrieval.cl',
    'piv.cl',
    'polar.cl',
    'rescale.cl',
    'reductor.cl',
    'segment.cl',
    'swap-quadrants.cl',
    'zeropad.cl'
]

install_data(kernel_files,
    install_dir: kernel_install_dir,
)
